Changing receiving - Race Portal instead of FB